# pySPECRE

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.rst  __init__.py  setup.cfg  tox.ini
examples/: quintuple_degeneracy.py
src/pySPECRE/: __init__.py  pySPECRE.py
tests/: test_quintuple.py
