[metadata]
name = pySPECRE
version = 0.0.0
license_files = LICENSE
description = Python package for computation and sorting of complex eigenvalues
long_description = file: README.rst
author = Patrick Cook
author_email = cookpat4@msu.edu
classifiers=
Development Status :: 2 - Pre-Alpha
Intended Audience :: Science/Research
License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
Operating System :: POSIX :: Linux
Programming Language :: Python :: 3.8
Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    typing
    numpy
    scipy

[options.packages.find]
where=src
